# perago

./: .env.example  .gitignore  .readthedocs.yaml  CONTEXT.md  README.md  codecov.yml  development_todo.md  main.py  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: chat_log.md  conf.py  development.md  documentation_development_plan.md  getting-started.md  index.md  lakefs-publication-protocol.md  mvp_examples.md  requirements.txt
docs/_static/: custom.css
docs/adr/: 0001-use-tcc-inspired-workspace-transaction.md  0002-classify-workspace-guardrail-failures-by-phase.md  README.md  template.md
docs/api/: config.rst  errors.rst  index.rst  metadata.rst  models.rst  results.rst  runtime.rst  staging.rst  task-authoring.rst  task.rst  workspace.rst
docs/architecture/: index.md  publish-fences.md  transaction-model.md
scripts/: perago_smoke_worker.py  real_conductor_lakefs_smoke.py  real_conductor_lakefs_smoke_issues.md  real_lakefs_publication_protocol_smoke.py
taskdefs/: perago.smoke.workspace.json
tests/: test_attempt.py  test_cli.py  test_conductor_runtime.py  test_conductor_runtime_imports.py  test_config.py  test_env_example.py  test_execution.py  test_lakefs_runtime.py  test_metadata.py  test_publish_budget.py  test_result.py  test_runtime_logging.py  test_supervisor.py  test_task_api.py  test_taskdef.py  test_version.py  test_worker_runtime.py  test_workspace.py  test_workspace_compatibility.py  test_workspace_contract.py  test_workspace_gc.py  test_workspace_lifecycle.py  test_workspace_paths.py  test_workspace_sync.py
(+112 files in other folders)
