[project]
name = "perago"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Yikai Liao", email = "lyk-boya@outlook.com" },
]
dependencies = [
    "conductor-python>=1.3.11",
    "lakefs>=0.16.0",
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "typer>=0.25.1",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project.scripts]
perago = "perago.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "tests/fixtures"]
